--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p class="quote">Wow! This tour made me realize how much I love mountains. After going on one of these tours, I can safely say that they are my favorite geographic feature, and my favorite word that starts with M.</p>
     <p class="author">- Colt Steele</p>
     <p class="quote">Let's Go <em></em></p>
-    <p class="author">- Zukthi</p>
+    <p class="author">- Syed</p>
     <p class="quote">Fill Your Life With Adventures, Not things. Have Stories To Tell Not Stuff To Show.</p>
     <p class="author">- Harry</p>
   </section>
